--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Configure AWS credentials via OIDC (no secrets)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::294944667890:role/GitHubActions-Terraform-DeployRole
+          role-to-assume: arn:aws:iam::294944667890:role/OICD
           aws-region: us-east-1
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
